# SSN-Sigil-Structured-Notation

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: __init__.py  bioinformatics_examples.py  general_examples.py  llm_prompts_examples.py  ngs_examples.py  nl_conversion_examples.py
ssn/: __init__.py  __main__.py  core.py  decoder.py  encoder.py  nl_converter.py  parser.py
tests/: __init__.py  prompt.txt  query.txt  test_ssn.py
