[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssn-notation"
version = "0.1.0"
description = "Sigil Structured Notation - Token-efficient format for LLM communication"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pritam Kumar Panda", email = "your.email@example.com"}
]
maintainers = [
    {name = "Pritam Kumar Panda", email = "your.email@example.com"}
]
keywords = [
    "llm",
    "notation",
    "token-efficient",
    "bioinformatics",
    "drug-design",
    "json-alternative",
    "chatgpt",
    "claude",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
ssn = "ssn.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/ssn"
Documentation = "https://github.com/yourusername/ssn#readme"
Repository = "https://github.com/yourusername/ssn.git"
Issues = "https://github.com/yourusername/ssn/issues"
Changelog = "https://github.com/yourusername/ssn/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
